<resources>
    <string name="app_name">Sales Agent</string>
    <string name="product_list_button_main">Product list</string>
    <string name="order_list_button_main">My orders</string>
    <string name="client_history_button_main">Client history</string>
    <string name="client_list_button_main">Client list</string>
    <string name="daily_report_button_main">Daily orders</string>
    <string name="settings_button_main">Settings</string>
    <string name="back_button">Back</string>
    <string name="outlets_address_header">Outlets address</string>
    <string name="tva_cod_client">C/F:</string>
    <string name="idnp_client">IDNO:</string>
    <string name="cod_client">Cod:</string>
    <string name="all_orders">All orders</string>
    <string name="in_queue_orders">In queue orders</string>
    <string name="in_work_orders">In work orders</string>
    <string name="drafts_orders">Drafts orders</string>
    <string name="new_order">New order</string>
    <string name="show_all">show all</string>
    <string name="search_more_orders">Search more orders</string>
    <string name="total_sum_orders_today">Total sum:</string>
    <string name="session_valid_text">"Session valid to: "</string>
    <string name="main_header_text_title">Main</string>
    <string name="dialog_msg_update_token">Update token...</string>
    <string name="dialog_msg_sync_to_start">Synchronization start...</string>
    <string name="dialog_msg_get_orders">Obtain orders information...</string>
    <string name="input_filed_error">Input field!</string>
    <string name="order_is_in_process_can_edit_order_after_you_cancel_this_order">Order is in process! Can edit order after you CANCEL this order!</string>
    <string name="order_detail">Order detail</string>
    <string name="add_products_to_order">Add products</string>
    <string name="add_comment_to_order">Add comment</string>
    <string name="product_order_list_title">Product</string>
    <string name="amount_order_list_title">Amount</string>
    <string name="price_order_list_title">Price</string>
    <string name="discount_order_list_title">Discount</string>
    <string name="total_order_list_title">Total</string>
    <string name="share_document">Share document</string>
    <string name="save_and_send_order">Save and send</string>
    <string name="save_changes_orders">Save changes</string>
    <string name="total_cost_order">Total cost:</string>
    <string name="exit_button">Exit</string>
    <string name="search_for">Search for:</string>
    <string name="period_searched">Period:</string>
    <string name="to_searched_period">to</string>
    <string name="search_button">Search</string>
    <string name="send_order_shop_cart">Send order</string>
    <string name="save_order_shop_cart">Save order</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="sign_in_button">Sign In</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="title_sign_in_header">Introdu login si parola, apasa Sign inpentru a putea folosi aplicatia!</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="code_hint">Activation code</string>
    <string name="register_device_title">Register device</string>
    <string name="register_button">Register</string>
    <string name="hint_title_header_register">Introduceti codului de acces, tastati butonul Inregistrare. Dupa aceaseta aplicatia va ofera posibilitatea de a introduce loginul si parola dumeavoastra.</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="dialog_msg_register_device">Register device...</string>
    <string name="failure_connect">\"Failure connect to Broker! Message: \"</string>
    <string name="dialog_msg_obtain_uri">Obtain URI...</string>
    <string name="dialog_msg_authorize_user">Authorization user...</string>
    <string name="site_detail_info">Viziteaza site-ul nostru pentru a afla mai multe detalii despre noi!</string>
    <string name="service_desk_detail_info">Ai o intrebare? Lasa o cerere, iar noi te apelam in cel mai scurt timp.</string>
    <string name="phone_detail_info">Ai o problema? Suna la Suport Tehnic, te vom ajuta!</string>
    <string name="sign_title_header">Sign in</string>
    <string name="order_list_header_activity">Заказы</string>
    <string name="dialog_msg_warning">Warning!</string>
    <string name="dialog_msg_log_out_user">Do you want log-out application?</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_msg_title_cancel_order">Cancel order...</string>
    <string name="order_state_draft">draft</string>
    <string name="order_state_in_queue">in queue</string>
    <string name="order_state_draft_state">Order state: Draft</string>
    <string name="order_state_in_work">in work</string>
    <string name="order_is_in_work_can_only_view_detail">Order is in work! You can only view detail!</string>
    <string name="order_state_prepared">prepared</string>
    <string name="order_is_prepared_can_only_view_detail">Order is prepared! You can only view detail!</string>
    <string name="order_is_final_can_only_view_detail">Order is final! You can only view detail!</string>
    <string name="order_state_final">Final</string>
    <string name="order_state_text">"Order state: "</string>
    <string name="dialog_msdg_title_save_order">Save order...</string>
    <string name="dialog_button_retry">RETRY</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_msg_error_save_order">Error save order!</string>
    <string name="dialog_msg_load_image">Load image order...</string>
    <string name="client_title">Clients</string>
    <string name="select_outlet_for_client">Select outlet for\n</string>
    <string name="select_outlets_for_client_to_continue">Select outlets to continue!</string>
    <string name="client_detail_title_activity">Client detail</string>
    <string name="balance_client_text">"Balance: "</string>
    <string name="dialog_msg_get_client_info">Obtain client information...</string>
    <string name="obtain_info_about_product_dialog_msg">Obtain information about product...</string>
    <string name="products_header_activity">Products</string>
    <string name="dialog_title_product_information">Product information</string>
    <string name="dialog_product_info_price">Price:</string>
    <string name="dialog_product_info_barcode">Barcode:</string>
    <string name="dialog_product_info_product_id">Product ID:</string>
    <string name="dialog_product_info_remain">Remain:</string>
    <string name="dialog_product_info_close">Close</string>
    <string name="no_data_about_outlets">No data</string>
    <string name="no_orders_about_orders">No orders</string>
    <string name="create_order_client_outlets_dialog_button">Create order</string>
    <string name="order_history_activity_title">"Order: "</string>
    <string name="add_product_to_card">ADD</string>
    <string name="order_order_item_list">Order</string>
    <string name="date_order_item_list">Date</string>
    <string name="sum_order_item_list">Sum</string>
    <string name="state_order_item_list">State</string>
    <string name="syncronization_title">Synchronization</string>
    <string name="start_sync_item_settings">Start sync</string>
    <string name="latest_sync_item_detail_info">Latest sync:</string>
    <string name="sync_to_start_item_settings">Sync to start</string>
    <string name="sync_when_application_start">Sync when application start</string>
    <string name="language_application_item_settings">Language application</string>
    <string name="selected_language_info">Selected language:</string>
    <string name="language_title_settings">Language</string>
    <string name="dialog_product_info_add_to_cart">Add to cart</string>
    <string name="filter_order_dialog">Filter orders</string>
    <string name="order_state_filter_dialog">Order state</string>
    <string name="order_code_filter_dialog">Order code</string>
    <string name="save_filter_filter_dialog">Save filter</string>
    <string name="apply_filter_dialog">Apply</string>
    <string name="clear_all_filters_filter_dialog">Clear all filters</string>
    <string name="draft_order">Draft</string>
    <string name="in_queue_order">In queue</string>
    <string name="in_work_order">In work</string>
    <string name="processed_order">Processed</string>
    <string name="order_date_filter_dialog">Order date</string>
    <string name="order_not_saved_dialog_exit">Order not saved!</string>
    <string name="do_you_want_save_this_order_and_exit_dialog_exit">Do you want save this order and exit?</string>
    <string name="send_to_server_dialog_exit">Send to server</string>
    <string name="save_local_and_exit_dialog_exit">Save local and exit</string>
    <string name="comments_to_order_title_dialog">Comments to order</string>
    <string name="add_comment_hint_comment_dialog">Add comment</string>
    <string name="select_language_aplication_detail_info">Select langauge aplication</string>
    <string name="sync_settings_item">Sync</string>
    <string name="synchronization_data_info">Synchronization data</string>
    <string name="workplace_settings_item">Workplace</string>
    <string name="export_import_asortiment_favorit">Export/Import asortiment favorit</string>
    <string name="about_settings_item">About</string>
    <string name="information_about_application">Information about application</string>
    <string name="general_settings">General</string>
    <string name="select_parameters_from_the_left_settings">Select parameters from the left</string>
    <string name="shopping_cart_orders">Shopping cart</string>
    <string name="select_client_tittle_activity">Select client</string>
    <string name="news_header_title">News</string>
    <string name="detail_news_header_activity">About news</string>
    <string name="send_diagnostic_item">Send diagnostic</string>
    <string name="create_order_assortment_activity_header">Create order</string>
    <string name="settings_name_activity">Settings</string>
    <string name="balance_client_in_shop_cart">"Balance: "</string>
    <string name="order_histori_client_state">This order is draft.</string>
    <string name="order_histori_client_state_queue">This order is queue.</string>
    <string name="order_histori_client_state_work">This order is in work.</string>
    <string name="order_histori_client_state_prepared">This order is prepared.</string>
    <string name="verifica_reducere_shop_cart">Check discount</string>
    <string name="daily_report_activity">Daily report</string>
    <string name="empty_document">Document not empty. Wat do with document?</string>
    <string name="first_save_changes">First save the changes!</string>
</resources>